[package]
name = "prismswap-token"
version = "1.0.0"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
backtraces = ["cosmwasm-std/backtraces"]
# use library feature to disable all init/handle/query exports
library = []

[dependencies]
prismswap = { path = "../../packages/prismswap", default-features = false, version = "1.0.1"}
cw2 = "0.8"
cw20 = "0.8"
cw20-base = { version = "0.8", features = ["library"] }
cosmwasm-std = { version = "0.16.0", features = ["iterator"] }
schemars = "0.8.1"
serde = { version = "1.0.103", default-features = false, features = ["derive"] }

[dev-dependencies]
cosmwasm-schema = { version = "0.16.0" }
